# Ai-Agent-email-writer

./: README.md  pyproject.toml  report.md  requirements.txt
.devcontainer/: devcontainer.json
knowledge/: user_preference.txt
src/myproject/: crew.py  main.py  streamlit_app.py
src/myproject/config/: agents.yaml  tasks.yaml
